--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -7,6 +7,14 @@
 
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
 
+      <!-- Selección de rol -->
+      <div class="form-group role-selection">
+        <mat-radio-group [(ngModel)]="userRole" aria-label="Selecciona tu rol">
+          <mat-radio-button value="tutor">Tutor</mat-radio-button>
+          <mat-radio-button value="cliente">Cliente</mat-radio-button>
+        </mat-radio-group>
+      </div>
+
       <div class="form-group">
         <mat-form-field appearance="outline" class="form-input">
           <mat-label>Correo Electrónico</mat-label>
@@ -25,12 +33,10 @@
         </mat-form-field>
       </div>
 
-
       <button mat-raised-button color="primary" class="submit-button" type="submit" [disabled]="loginForm.invalid">
         Iniciar Sesión
       </button>
     </form>
-
 
     <p class="register-link">
       ¿No tienes cuenta? <a routerLink="/auth/register">Crea una cuenta aquí</a>
