--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer-section">
   <div class="footer-content">
       <p>&copy; 2024 ApoyoWeb. Todos los derechos reservados.</p>
-      <p>Contáctenos: <a href="mailto:contacto@apoyoweb.com">contactoapoyoweb.com</a> | Tel: +1 (123) 456-7890</p>
+      <p>Contáctenos: <a href="mailto:contacto@apoyoweb.com">contactoapoyoweb.com</a> | Tel: +51 989 999 555</p>
   </div>
 </footer>
