--- a/src/app/shared/components/navbar-tutor/navbar-tutor.component.html
+++ b/src/app/shared/components/navbar-tutor/navbar-tutor.component.html
@@ -1,1 +1,13 @@
-<p>navbar-tutor works!</p>
+<nav class="navbar">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">ApoyoWeb Tutor</a>
+
+    <div class="navbar-links">
+      <a class="nav-link" routerLink="/tutor/homepage-tutor" routerLinkActive="active">Inicio</a>
+      <a class="nav-link" routerLink="/tutor/cursos-general" routerLinkActive="active">Cursos</a>
+      <a class="nav-link" routerLink="/tutor/tutorias" routerLinkActive="active">Tutorías</a>
+      <a class="nav-link" routerLink="/tutor/perfil" routerLinkActive="active">Perfil</a>
+      <a class="nav-link logout" routerLink="/auth/login" routerLinkActive="active">Cerrar Sesión</a>
+    </div>
+  </div>
+</nav>
