--- a/src/app/pages/tutor/subir-material/subir-material.component.css
+++ b/src/app/pages/tutor/subir-material/subir-material.component.css
@@ -23,24 +23,23 @@
 }
 
 .form-group {
-  width: 100%; /* Asegura que el grupo ocupe todo el ancho */
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .form-input {
   width: 100%;
-  font-size: 20px; /* Aumenta el tamaño de la fuente */
+  font-size: 20px;
   padding: 15px;
-  box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
-}
+  box-sizing: border-box; }
 
 textarea {
-  width: 100%; /* Asegura que el área de texto ocupe todo el ancho */
+  width: 100%;
   min-height: 150px;
   font-size: 18px;
   padding: 15px;
-  box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
+  box-sizing: border-box;
 }
 
 .mat-form-field {
