--- a/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
+++ b/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
@@ -1,1 +1,26 @@
-<p>navbar-cliente works!</p>
+<nav class="navbar">
+  <div class="container">
+      <div class="nav-content">
+          <h1 id="logo">
+              ApoyoWeb
+          </h1>
+          <div class="cta-image">
+              <img src="assets/img/LogoApoyoWeb.png" alt="Logo">
+          </div>
+          <ul id="menu">
+              <li><a routerLink="/cliente/buscar-tutores">Tutorías</a></li>
+              <li><a routerLink="/cliente/">Únete</a></li>
+              <li><a routerLink="/cliente/">Contenido Académico</a></li>
+              <li><a routerLink="/cliente/">Contáctanos</a></li>
+          </ul>
+          <div class="user-box">
+              <img src="assets/img/usuario.png" alt="Usuario" class="user-photo">
+              <div class="user-info">
+                  <p class="user-name">Usuario</p>
+                  <a routerLink="/configuracion" class="settings-link">Configuración</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</nav>
+
