--- a/src/app/pages/auth/login/login.component.css
+++ b/src/app/pages/auth/login/login.component.css
@@ -26,7 +26,7 @@ main {
   color: #FFECFB;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-/* Selección de rol */
+
 .role-selection {
   display: flex;
   justify-content: center;
@@ -39,7 +39,7 @@ main {
 }
 
 .mat-radio-checked .mat-radio-inner-circle {
-  background-color: #1282A2; /* Color de selección */
+  background-color: #1282A2;
 }
 
 .mat-radio-label-content {
