feature: Se agregaron la modificacion de perfil de cliente y la creacion de examenes para los tutores

--- a/src/app/pages/tutor/curso-individual/curso-individual.component.html
+++ b/src/app/pages/tutor/curso-individual/curso-individual.component.html
@@ -7,7 +7,7 @@
   <div class="course-actions">
     <button routerLink="/tutor/subir-material" class="action-button">Subir Contenido</button>
     <button routerLink="/tutor/asignar-tarea" class="action-button">Asignar Tareas</button>
-    <button routerLink="/tutor/" class="action-button">Asignar Evaluaciones</button>
+    <button routerLink="/tutor/asignar-examen" class="action-button">Asignar Evaluaciones</button>
     <button routerLink="/tutor/evaluar-desempeno" class="action-button">Evaluar Alumnos</button>
     <button routerLink="/tutor/" class="action-button">Calificar Tareas y Evaluaciones</button>
     <button routerLink="/tutor/gestion-tutoria" class="action-button">Tutorias</button>
