--- a/src/app/pages/tutor/homepage-tutor/homepage-tutor.component.html
+++ b/src/app/pages/tutor/homepage-tutor/homepage-tutor.component.html
@@ -6,7 +6,7 @@
 
   <div class="section-links">
     <a routerLink="/tutor/cursos-general" class="button-link">Ver Cursos</a>
-    <a routerLink="/tutor/tutorias" class="button-link">Ver Tutorías</a>
+    <a routerLink="/tutor/gestion-tutoria" class="button-link">Ver Tutorías</a>
     <a routerLink="/tutor/perfil" class="button-link">Editar Perfil</a>
   </div>
 </div>
