--- a/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
+++ b/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
@@ -17,7 +17,7 @@
               <img src="assets/img/usuario.png" alt="Usuario" class="user-photo">
               <div class="user-info">
                   <p class="user-name">Usuario</p>
-                  <a routerLink="/configuracion" class="settings-link">Configuración</a>
+                  <a routerLink="/cliente/modificar-perfil" class="settings-link">Configuración</a>
               </div>
           </div>
       </div>
