Fix: Se arregló la barra de busqueda de tutores

--- a/src/app/pages/cliente/buscar-tutores/buscar-tutores.component.html
+++ b/src/app/pages/cliente/buscar-tutores/buscar-tutores.component.html
@@ -41,13 +41,18 @@
 
   <section class="search-results" *ngIf="filteredTutors.length > 0">
     <h3>Resultados de búsqueda</h3>
-    <div *ngFor="let tutor of filteredTutors" class="tutor-card">
+    <div *ngFor="let tutor of paginatedTutors" class="tutor-card">
       <h4>{{ tutor.name }}</h4>
       <p>Categoría: {{ tutor.category }}</p>
       <p>Ranking: {{ tutor.ranking }}</p>
       <p>Precio por hora: S/{{ tutor.price }}</p>
       <button class="contact-button">Contactar</button>
     </div>
+    <mat-paginator [length]="filteredTutors.length"
+                   [pageSize]="pageSize"
+                   [pageSizeOptions]="[5, 10, 20]"
+                   (page)="onPageChange($event)">
+    </mat-paginator>
   </section>
 
   <section *ngIf="filteredTutors.length === 0 && searchPerformed" class="no-results">
