--- a/src/app/pages/cliente/homepage-cliente/homepage-cliente.component.html
+++ b/src/app/pages/cliente/homepage-cliente/homepage-cliente.component.html
@@ -25,6 +25,12 @@
       <div class="review">
         <p>"Las tutorías de matemáticas son muy efectivas y me ayudaron a aprobar." - María R.</p>
       </div>
+      <div class="review">
+        <p>"Las clases de programación me ayudaron mucho en mis cursos de universidad." - Alejandro R.</p>
+      </div>
+      <div class="review">
+        <p>"Mejore mis notas gracias a esta página." - Carlos M.</p>
+      </div>
     </div>
   </section>
 </main>
