--- a/src/app/pages/auth/login/login.component.css
+++ b/src/app/pages/auth/login/login.component.css
@@ -4,6 +4,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
+
 }
 
 main {
@@ -13,6 +14,7 @@ main {
   justify-content: center;
   min-height: calc(100vh - 100px);
   padding: 20px;
+
 }
 
 .login-container {
@@ -20,10 +22,10 @@ main {
   width: 100%;
   margin: 20px auto;
   padding: 30px;
-  background-color: #0A1128;
+  background-color: #fdfdff;
   border-radius: 10px;
   text-align: center;
-  color: #FFECFB;
+  color: #034078;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -35,7 +37,7 @@ main {
 
 .role-selection mat-radio-button {
   margin: 0 10px;
-  color: #FFECFB;
+  color: #034078;
 }
 
 .mat-radio-checked .mat-radio-inner-circle {
@@ -44,21 +46,21 @@ main {
 
 .mat-radio-label-content {
   font-size: 16px;
-  color: #FFECFB;
+  color: #034078;
 }
 
 
 .login-header {
   font-size: 28px;
   margin-bottom: 10px;
-  color: #FFECFB;
+  color: #034078;
   font-family: 'Times New Roman', Times, serif;
 }
 
 .login-subtext {
   font-size: 16px;
   margin-bottom: 30px;
-  color: #FFECFB;
+  color: #034078;
 }
 
 .login-form {
@@ -70,6 +72,7 @@ main {
 .form-group {
   width: 100%;
   margin-bottom: 20px;
+  color: #034078;
 }
 
 .form-input {
@@ -119,24 +122,3 @@ main {
   color: #5fb1ff;
 }
 
-.footer-section {
-  background-color: #001F54;
-  padding: 20px;
-  text-align: center;
-  color: #FFECFB;
-  margin-top: auto;
-}
-
-.footer-content p {
-  font-size: 16px;
-  margin: 5px 0;
-}
-
-.footer-content a {
-  color: #1282A2;
-  text-decoration: none;
-}
-
-.footer-content a:hover {
-  color: #5fb1ff;
-}
