--- a/src/app/pages/auth/register/register.component.css
+++ b/src/app/pages/auth/register/register.component.css
@@ -1,4 +1,3 @@
-
 body {
   display: flex;
   flex-direction: column;
@@ -15,32 +14,29 @@ main {
   padding: 20px;
 }
 
-
 .register-container {
   max-width: 500px;
   width: 100%;
   margin: 20px auto;
   padding: 30px;
-  background-color: #0A1128;
+  background-color: #fdfdff;
   border-radius: 10px;
   text-align: center;
-  color: #FFECFB;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+  color: #034078;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 
 .register-header {
   font-size: 28px;
   margin-bottom: 10px;
-  color: #FFECFB;
+  color: #034078;
   font-family: 'Times New Roman', Times, serif;
 }
-
 
 .register-subtext {
   font-size: 16px;
   margin-bottom: 30px;
-  color: #FFECFB; /* WHITE */
+  color: #034078;
 }
 
 .register-form {
@@ -58,15 +54,38 @@ main {
   width: 100%;
 }
 
-.mat-form-field-label {
-  color: #FFECFB !important;
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  color: #034078 !important;
+  border-color: #034078 !important;
 }
 
-.mat-form-field-appearance-outline .mat-form-field-outline,
 .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-  color: #1282A2;
+  color: #034078 !important;
+  border-color: #034078 !important;
 }
 
+.mat-form-field-label {
+  color: #034078 !important;
+}
+
+.mat-input-element {
+  color: #034078;
+  padding: 8px;
+}
+
+.mat-focused .mat-form-field-label {
+  color: #034078 !important;
+}
+
+.mat-radio-button .mat-radio-inner-circle {
+  background-color: #034078 !important;
+}
+
+.mat-radio-checked .mat-radio-outer-circle,
+.mat-radio-checked .mat-radio-inner-circle {
+  border-color: #034078 !important;
+  background-color: #034078 !important;
+}
 
 .submit-button {
   width: 100%;
@@ -77,6 +96,7 @@ main {
   font-weight: bold;
   border-radius: 5px;
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .submit-button:disabled {
@@ -87,14 +107,13 @@ main {
   background-color: #001F54;
 }
 
-
 .login-link {
   margin-top: 20px;
   font-size: 14px;
 }
 
 .login-link a {
-  color: #1282A2;
+  color: #034078;
   text-decoration: none;
 }
 
@@ -102,14 +121,18 @@ main {
   color: #5fb1ff;
 }
 
-
 .footer-section {
   background-color: #001F54;
   padding: 20px;
   text-align: center;
-  color: #FFECFB;
+  color: #034078;
   margin-top: auto;
 }
+
+.register-container {
+  transform: translateZ(0);
+}
+
 
 .footer-content p {
   font-size: 16px;
