--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -5,14 +5,20 @@
     <h2 class="register-header">Crea tu cuenta en ApoyoWeb</h2>
     <p class="register-subtext">Completa los campos para registrarte</p>
 
-
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
+      <div class="form-group">
+        <mat-form-field appearance="outline" class="form-input">
+          <mat-label>Nombres</mat-label>
+          <input matInput formControlName="firstName" placeholder="Introduce tus nombres">
+          <mat-error *ngIf="controlHasError('firstName', 'required')">Este campo es obligatorio</mat-error>
+        </mat-form-field>
+      </div>
 
       <div class="form-group">
         <mat-form-field appearance="outline" class="form-input">
-          <mat-label>Nombre Completo</mat-label>
-          <input matInput formControlName="fullName" placeholder="Introduce tu nombre completo">
-          <mat-error *ngIf="controlHasError('fullName', 'required')">Este campo es obligatorio</mat-error>
+          <mat-label>Apellidos</mat-label>
+          <input matInput formControlName="lastName" placeholder="Introduce tus apellidos">
+          <mat-error *ngIf="controlHasError('lastName', 'required')">Este campo es obligatorio</mat-error>
         </mat-form-field>
       </div>
 
@@ -22,6 +28,13 @@
           <input matInput formControlName="email" placeholder="Introduce tu correo">
           <mat-error *ngIf="controlHasError('email', 'required')">Este campo es obligatorio</mat-error>
           <mat-error *ngIf="controlHasError('email', 'email')">Introduzca un correo electrónico válido</mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-group">
+        <mat-form-field appearance="outline" class="form-input">
+          <mat-label>Universidad</mat-label>
+          <input matInput formControlName="university" placeholder="Introduce tu universidad">
         </mat-form-field>
       </div>
 
@@ -43,6 +56,13 @@
         </mat-form-field>
       </div>
 
+      <div class="form-group">
+        <label>Selecciona tu rol:</label>
+        <mat-radio-group formControlName="role" aria-label="role">
+          <mat-radio-button value="student">Soy Estudiante</mat-radio-button>
+          <mat-radio-button value="tutor">Soy Tutor</mat-radio-button>
+        </mat-radio-group>
+      </div>
 
       <button mat-raised-button color="primary" class="submit-button" type="submit" [disabled]="registerForm.invalid">
         Registrarse
