--- a/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
+++ b/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
@@ -5,7 +5,7 @@
               ApoyoWeb
           </h1>
           <div class="cta-image">
-              <img src="assets/img/LogoApoyoWeb.png" alt="Logo">
+              <img src="img/LogoApoyoWeb.png" alt="Logo">
           </div>
           <ul id="menu">
               <li><a routerLink="/cliente/buscar-tutores">Tutorías</a></li>
@@ -14,7 +14,7 @@
               <li><a routerLink="/cliente/">Contáctanos</a></li>
           </ul>
           <div class="user-box">
-              <img src="assets/img/usuario.png" alt="Usuario" class="user-photo">
+              <img src="img/usuario.png" alt="Usuario" class="user-photo">
               <div class="user-info">
                   <p class="user-name">Usuario</p>
                   <a routerLink="/cliente/modificar-perfil" class="settings-link">Configuración</a>
