--- a/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
+++ b/src/app/shared/components/navbar-cliente/navbar-cliente.component.html
@@ -11,7 +11,7 @@
               <li><a routerLink="/cliente/buscar-tutores">Tutorías</a></li>
               <li><a routerLink="/cliente/">Únete</a></li>
               <li><a routerLink="/cliente/">Contenido Académico</a></li>
-              <li><a routerLink="/cliente/">Contáctanos</a></li>
+              <li><a routerLink="/cliente/contactanos">Contáctanos</a></li>
           </ul>
           <div class="user-box">
               <img src="img/usuario.png" alt="Usuario" class="user-photo">
