--- a/src/app/pages/cliente/pagar-tutoria/pagar-tutoria.component.html
+++ b/src/app/pages/cliente/pagar-tutoria/pagar-tutoria.component.html
@@ -1,1 +1,62 @@
-<p>pagar-tutoria works!</p>
+<app-navbar-cliente></app-navbar-cliente>
+
+<main class="payment-container">
+  <h2 class="payment-title">Pagar Tutoría</h2>
+  <p class="tutor-name">Tutor: {{ tutorName }}</p>
+  <p class="total-price">Precio Total: {{ totalPrice | currency: 'S/' }}</p>
+
+  <form class="payment-form" (ngSubmit)="submitPayment()">
+    <div class="form-group">
+      <label for="cardName">Nombre en la Tarjeta:</label>
+      <input
+        type="text"
+        id="cardName"
+        [(ngModel)]="cardName"
+        name="cardName"
+        required
+        placeholder="Ingresa el nombre tal como aparece en la tarjeta"
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="cardNumber">Número de Tarjeta:</label>
+      <input
+        type="text"
+        id="cardNumber"
+        [(ngModel)]="cardNumber"
+        name="cardNumber"
+        required
+        maxlength="16"
+        placeholder="Ingresa los 16 dígitos de tu tarjeta"
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="expirationDate">Fecha de Expiración:</label>
+      <input
+        type="month"
+        id="expirationDate"
+        [(ngModel)]="expirationDate"
+        name="expirationDate"
+        required
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="securityCode">Código de Seguridad (CVV):</label>
+      <input
+        type="password"
+        id="securityCode"
+        [(ngModel)]="securityCode"
+        name="securityCode"
+        required
+        maxlength="3"
+        placeholder="123"
+      />
+    </div>
+
+    <button type="submit" routerLink="/cliente/buscar-tutores" class="pay-button">Realizar Pago</button>
+  </form>
+</main>
+
+<app-footer></app-footer>
