--- a/src/app/pages/tutor/asignar-examen/asignar-examen.component.html
+++ b/src/app/pages/tutor/asignar-examen/asignar-examen.component.html
@@ -43,7 +43,7 @@
       <button type="button" class="create-exam-button">Crear Examen en la Web</button>
     </div>
 
-    <button type="button" class="publish-exam-button" routerLink="/tutor/homepage-tutor" (click)="publicarExamen()">Publicar Examen</button>
+    <button type="button" class="publish-exam-button" routerLink="/tutor/cursos-general" (click)="publicarExamen()">Publicar Examen</button>
   </form>
 </main>
 
