--- a/src/app/pages/tutor/asignar-tarea/asignar-tarea.component.html
+++ b/src/app/pages/tutor/asignar-tarea/asignar-tarea.component.html
@@ -48,7 +48,7 @@
       <input type="time" id="endTime" />
     </div>
 
-    <button type="button" class="publish-button" routerLink="/tutor/homepage-tutor" (click)="publicarTarea()">Publicar Tarea</button>
+    <button type="button" class="publish-button" (click)="publicarTarea()">Publicar Tarea</button>
   </form>
 </main>
 
