--- a/src/app/pages/tutor/gestion-grabaciones/gestion-grabaciones.component.css
+++ b/src/app/pages/tutor/gestion-grabaciones/gestion-grabaciones.component.css
@@ -1,6 +1,7 @@
 .recordings-management-container {
   max-width: 800px;
   margin: 40px auto;
+  min-height: calc(100vh - 235px);
   padding: 20px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -15,10 +16,12 @@
 }
 
 .no-recordings {
+
   text-align: center;
   color: #666;
   font-size: 18px;
   margin: 20px 0;
+
 }
 
 .recording-item {
