--- a/src/app/shared/components/navbar-cliente/navbar-cliente.component.css
+++ b/src/app/shared/components/navbar-cliente/navbar-cliente.component.css
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: white;
-  color: black;
+  background-color: #0A1128;
+  color: white;
   padding: 10px 20px;
 }
 
@@ -30,7 +30,7 @@
 #menu a {
   font-size: 20px;
   text-decoration: none;
-  color: black;
+  color: white;
   transition: color 0.3s;
 }
 
