Arreglada la alerta de confirmacion a la hora de hacer el pago

--- a/src/app/pages/cliente/pagar-tutoria/pagar-tutoria.component.html
+++ b/src/app/pages/cliente/pagar-tutoria/pagar-tutoria.component.html
@@ -55,7 +55,7 @@
       />
     </div>
 
-    <button type="submit" routerLink="/cliente/buscar-tutores" class="pay-button">Realizar Pago</button>
+    <button (click)="submitPayment()" routerLink="/cliente/buscar-tutores" class="pay-button">Realizar Pago</button>
   </form>
 </main>
 
